--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -162,6 +162,10 @@ liip_imagine:
             quality: 75
             filters:
                 thumbnail: { size: [382, 285], mode: outbound }
+        news_406_280:
+            quality: 75
+            filters:
+                thumbnail: { size: [406, 280], mode: outbound }
 
 # KnpPaginationBundle
 knp_paginator:
