[02172020] Upload source code

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -24,13 +24,21 @@ monolog:
         console:
             type:  console
 
-# Disable send email on Production
+#Disable send email on Production
 swiftmailer:
     disable_delivery:  true
 
+twig:
+    cache: '%kernel.cache_dir%/twig'
+    debug:            '%kernel.debug%'
+    strict_variables: '%kernel.debug%'
+    form_themes:
+        - 'form/layout.html.twig'
+        - 'form/fields.html.twig'
+
 # EWZRecaptchaBundle
 ewz_recaptcha:
-    public_key:  6LdpzHEUAAAAAKwRzhbaJgv12ZzJT1BesNEWc4t5
-    private_key: 6LdpzHEUAAAAABSCqH__OeunrVcMshQ2TfEN5oHe
+    public_key:  6LetSH4UAAAAADHHSf0CxnXrUyEWEWye2miXC0s7
+    private_key: 6LetSH4UAAAAACjZ-T0_rI5mz5pF7dWUyGSWTTNf
     locale_key:  %kernel.default_locale%
     locale_from_request: true
