--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "knplabs/knp-menu-bundle": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.8",
         "liip/imagine-bundle": "^1.9",
+        "oneup/uploader-bundle": "^2.0",
         "paragonie/random_compat": "2.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
