--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.6",
         "bxslider": "^4.2.14",
-        "jquery-validation": "^1.19.0"
+        "jquery-validation": "^1.19.0",
+        "slick-carousel": "^1.8.1"
     }
 }
