--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -190,14 +190,26 @@ liip_imagine:
             quality: 100
             filters:
                 thumbnail: { size: [930, 310], mode: outbound }
+        product_450_450:
+            quality: 100
+            filters:
+                thumbnail: { size: [450, 450], mode: outbound }
+        product_84_70:
+            quality: 100
+            filters:
+                thumbnail: { size: [84, 70], mode: outbound }
+        product_120_120:
+            quality: 100
+            filters:
+                thumbnail: { size: [120, 120], mode: outbound }
         news_220_220:
             quality: 100
             filters:
                 thumbnail: { size: [220, 220], mode: outbound }
-        news_377_416:
+        news_377_385:
             quality: 100
             filters:
-                thumbnail: { size: [377, 416], mode: outbound }
+                thumbnail: { size: [377, 385], mode: outbound }
 
 # KnpPaginationBundle
 knp_paginator:
