--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "symfony/swiftmailer-bundle": "^2.3",
         "symfony/symfony": "^3.3",
         "twig/extensions": "^1.5",
-        "twig/twig": "^1.28 || ^2.0",
+        "twig/twig": "^2.0",
         "vich/uploader-bundle": "^1.4",
         "white-october/pagerfanta-bundle": "^1.0",
         "whiteoctober/breadcrumbs-bundle": "^1.4"
